--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "emailjs-com": "^2.4.0",
     "formik": "^1.5.8",
     "lodash": "^4.17.15",
+    "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.1.0",
