--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.1.0",
     "react-scripts": "3.1.2",
+    "react-stack-grid": "^0.7.1",
     "yup": "^0.27.0"
   },
   "scripts": {
