--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,6 @@
     "@fortawesome/react-fontawesome": "^0.1.5",
     "emailjs-com": "^2.4.0",
     "formik": "^1.5.8",
-    "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
@@ -38,7 +37,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "webpack-cli": "^3.3.9"
-  }
+  "devDependencies": {}
 }
