--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^16.9.0",
     "react-burger-menu": "^2.6.11",
     "react-dom": "^16.9.0",
+    "react-responsive": "^8.0.1",
     "react-router-dom": "^5.1.0",
     "react-scripts": "3.1.2",
     "react-stack-grid": "^0.7.1",
