--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.5",
     "axios": "^0.19.0",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "emailjs-com": "^2.4.0",
+    "express": "^4.17.1",
     "formik": "^1.5.8",
+    "nodemailer": "^6.3.1",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-burger-menu": "^2.6.11",
